FIX pink, festive not visible on superhero

--- a/sass/superhero/festive.scss
+++ b/sass/superhero/festive.scss
@@ -128,5 +128,5 @@ span.token.function {
 }
 
 .navbar {
-    background-image: url("https://previews.123rf.com/images/zara94/zara941711/zara94171100031/90743298-realistic-fir-branches-on-a-red-background-christmas-banner-with-snowflakes.jpg");
+    background-image: url("https://previews.123rf.com/images/zara94/zara941711/zara94171100031/90743298-realistic-fir-branches-on-a-red-background-christmas-banner-with-snowflakes.jpg") !important;
 }
